Populated tiramisu recipe file
Completed the tiramisu cake recipe and moved the return button
to the bottom of the page. (tiramisu.html)

Added an image folder to better organise the file system (/images)

--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -5,7 +5,39 @@
         <title>Grandma's Secrets</title>
     </head>
     <body>
-        <h2><em><a href=../index.html>&lt;=Home</a></em></h2>
         <h1>Tiramisu</h1>
+        <img src="../images/tiramisu.jpg" alt="A delicious looking tiramisu cake" width ="400">
+        <p><em>Image from <a href="https://www.bfmtv.com/pratique/cuisine/comment-realiser-un-tiramisu_AN-201903250036.html">bfmtv.com</a></em></p>
+        <h2>Description</h2>
+        <p>Tiramisu is an Italian dessert made of ladyfinger pastries (savoiardi) dipped in coffee, layered with a whipped mixture of egg yolks, sugar, and mascarpone, and topped with cocoa powder.</p>
+        <p>The recipe has been adapted into many varieties of cakes and other desserts. It's origin is disputed between the Italian regions of Veneto and Friuli-Venezia Giulia. The name comes from the Italian tirami su ('pick me up' or 'cheer me up').</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>500 g mascarpone cheese</li>
+            <li>500 ml sweetened coffee</li>
+            <li>400 g ladyfingers</li>
+            <li>8 tablespoons of sugar</li>
+            <li>5 eggs (separate the yolks from the egg whites)</li>
+            <li>3 tablespoons of cocoa powder</li>
+            <li>1 teaspoon of vanilla extract</li>
+            <li>a little bit of salt</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <h3>Preparing the cream</h3>
+            <li>In a medium sized bowl, add the egg whites with the salt and whip the eggs using hand blender, until you get a foamy mixture.</li>
+            <li>Add half of your sugar(4 tablespoons) and continue mixing it until you get shiny stiff peaks <em>(a marshmellow like texture).</em></li>
+            <li>In a separate medium sized bowl, add your egg yolks along with the rest of the sugar and the vanilla extract. Now whip the eggs until they get whiter and get a creamy texture.</li>
+            <li>Add the mascarpone (at room temperature) and slowly incorporate it (at first, so it doesn't splatter everywhere) into the mixture.</li>
+            <li>Take a spatula and carefully integrate the whipped eggs into the cream (use wide strokes, being careful not to squeeze the air out of the whipped eggs too much).</li>
+            <h3>Assembling the cake</h3>
+            <li>Have a 20x20cm tray ready. Dip each ladyfinger into the sweetened coffee for about 3 seconds, and place them like so:</li>
+            <img src="../images/tiramisu2.png" alt="Ladyfingers lined up so that they fill up the tray bottom" width="400">
+            <li>Pour in half of your cream over the ladyfingers. Level it, then cover it with cocoa powder until your heart gives in (optional).</li>
+            <li>Prepare the next round of ladyfingers (should be the remaining half) and repeat steps 6, 7 (SIX SEVEEEEEEEN). </li>
+            <li>Almost done! Leave the cake in the fridge for at least a few hours, preferrably overnight. This allows the cake to fully absorb the flavour.</li>
+        </ol>
+        <p><strong> We're done! Congratulations on making this incredibly delicious Italian treat. For more recipes, click below to return to the home page:</strong></p>
+        <h2><em><a href=../index.html>&lt;=Home</a></em></h2>
     </body>
 </html>
