Adds one pan chicken recipe and various fixes
Complete new recipe(one-pan-chicken.html), with same structure as tiramisu.html
Added a new point in my README.md file, as a result of my progress.
Added a link to the new recipe in the home page.
Added new pictures.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <body>
         <h1>Odin Recipes</h1>
         <ol>
-            <li><a href=./recipes/tiramisu.html rel="noopener">Tiramisu</a></li>
+            <li><a href=./recipes/tiramisu.html>Tiramisu</a></li>
             <p>This <em>classic</em> Italian pastry is one of the <strong>easiest</strong> and <strong>most energizing</strong> desserts you will find in the Italian gastronomy.</p>
+            <li><a href=./recipes/one-pan-chicken.html>One Pan Chicken</a></li>
+            <p>Unusual recipe with <strong>chicken thighs and potatoes</strong>, it's amazingly <em>delicious!</em></p>
         </ol>
     </body>
 </html>
