--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Grandma's Secrets</title>
+        <title>Tiramisu cake</title>
     </head>
     <body>
         <h1>Tiramisu</h1>
         <img src="../images/tiramisu.jpg" alt="A delicious looking tiramisu cake" width ="400">
-        <p><em>Image from <a href="https://www.bfmtv.com/pratique/cuisine/comment-realiser-un-tiramisu_AN-201903250036.html">bfmtv.com</a></em></p>
+        <p><em>Image from <a href="https://www.bfmtv.com/pratique/cuisine/comment-realiser-un-tiramisu_AN-201903250036.html" rel="noopener noreferrer">bfmtv.com</a></em></p>
         <h2>Description</h2>
         <p>Tiramisu is an Italian dessert made of ladyfinger pastries (savoiardi) dipped in coffee, layered with a whipped mixture of egg yolks, sugar, and mascarpone, and topped with cocoa powder.</p>
         <p>The recipe has been adapted into many varieties of cakes and other desserts. It's origin is disputed between the Italian regions of Veneto and Friuli-Venezia Giulia. The name comes from the Italian tirami su ('pick me up' or 'cheer me up').</p>
