Added overnight oats recipe, final touches
Completed the final recipe (overnight-oats.html),
added a few new images and finished (I'd say...) the project.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="images/odin-logo.png" alt="Odin Project logo" width = 600>
         <ol>
             <li><a href=./recipes/tiramisu.html>Tiramisu</a></li>
             <p>This <em>classic</em> Italian pastry is one of the <strong>easiest</strong> and <strong>most energizing</strong> desserts you will find in the Italian gastronomy.</p>
             <li><a href=./recipes/one-pan-chicken.html>One Pan Chicken</a></li>
-            <p>Unusual recipe with <strong>chicken thighs and potatoes</strong>, it's amazingly <em>delicious!</em></p>
+            <p>New recipe with <strong>chicken thighs and potatoes</strong>, it's amazingly <em>delicious!</em></p>
+            <li><a href=./recipes/overnight-oats.html>Overnight Oats</a></li>
+            <p>Start your day with this <strong>stomach pleaser!</strong> This oatmeal recipe is <em>extremely</em> healthy and customisable, as you are able to add whatever nuts/fruits you like the most.
         </ol>
     </body>
 </html>
