Added basic styles
Set background color on all pages to beige, modified font.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Odin Recipes</h1>
         <img src="images/odin-logo.png" alt="Odin Project logo" width = 600>
-        <ol>
+        <ol class="recipe-list">
             <li><a href=./recipes/tiramisu.html>Tiramisu</a></li>
             <p>This <em>classic</em> Italian pastry is one of the <strong>easiest</strong> and <strong>most energizing</strong> desserts you will find in the Italian gastronomy.</p>
             <li><a href=./recipes/one-pan-chicken.html>One Pan Chicken</a></li>
