--- a/recipes/one-pan-chicken.html
+++ b/recipes/one-pan-chicken.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>One Pan Chicken</title>
+        <link href="../styles.css" rel="stylesheet">
     </head>
     <body>
         <h1>One Pan Chicken</h1>
