--- a/recipes/overnight-oats.html
+++ b/recipes/overnight-oats.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Overnight oats</title>
+        <link href="../styles.css" rel="stylesheet">
     </head>
     <body>
         <h1>Overnight oats</h1>
@@ -58,7 +59,7 @@
             <li>Leave them overnight. After that cover with toppings and serve.</li>
         </ol>
         <h3>Choco-Peanut butter oats</h3>
-        <img src="../images/overnight-oats-choco.png" alt="Oatmeal embraced by a chocolate shell and covered with other toppings" width="300">
+        <img class="instruction-photo" src="../images/overnight-oats-choco.png" alt="Oatmeal embraced by a chocolate shell and covered with other toppings" width="300">
         <ul>
             <h4>For main cup</h4>
             <li>1 serving Base oats</li>
