--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Tiramisu cake</title>
+        <link href="../styles.css" rel="stylesheet">
     </head>
     <body>
         <h1>Tiramisu</h1>
@@ -32,9 +33,9 @@
             <li>Take a spatula and carefully integrate the whipped eggs into the cream (use wide strokes, being careful not to squeeze the air out of the whipped eggs too much).</li>
             <h3>Assembling the cake</h3>
             <li>Have a 20x20cm tray ready. Dip each ladyfinger into the sweetened coffee for about 3 seconds, and place them like so:</li>
-            <img src="../images/tiramisu2.png" alt="Ladyfingers lined up so that they fill up the tray bottom" width="400">
+            <img class="instruction-photo" src="../images/tiramisu2.png" alt="Ladyfingers lined up so that they fill up the tray bottom" width="400">
             <li>Pour in half of your cream over the ladyfingers. Level it, then cover it with cocoa powder until your heart gives in (optional).</li>
-            <li>Prepare the next round of ladyfingers (should be the remaining half) and repeat steps 6, 7 (SIX SEVEEEEEEEN). </li>
+            <li>Prepare the next round of ladyfingers (should be the remaining half) and repeat steps 6, 7. </li>
             <li>Almost done! Leave the cake in the fridge for at least a few hours, preferrably overnight. This allows the cake to fully absorb the flavour.</li>
         </ol>
         <p><strong> We're done! Congratulations on making this incredibly delicious Italian treat. For more recipes, click below to return to the home page:</strong></p>
