More styles changes
- Added a border around the content of the page
- Aligned ingredients next to images/eachother to make it easier on the user's eyes.
- Finished CSS for this part of the course (Block and Inline lesson).

--- a/recipes/one-pan-chicken.html
+++ b/recipes/one-pan-chicken.html
@@ -14,13 +14,15 @@
         <p>The dish is very easy, so anyone can make it!<br>If you want a delicious lunch, prepare chicken thighs according to this recipe.</p>
         <p><strong><em>Simple, easy and delicious!</em></strong></p>
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="inline-list">
             <h3>For the chicken</h3>
             <li>600 g Boneless chicken thighs</li>
             <li>3/4 tsp Salt</li>
             <li>1/2 tsp Black pepper</li>
             <li>1 tsp Paprika</li>
             <li>1 tbsp Vegetable oil</li>
+        </ul>
+        <ul class="inline-list">
             <h3>For the vegetables</h3>
             <li>600 g Potatoes</li>
             <li>2 pcs. Onion</li>
@@ -45,7 +47,7 @@
             <li>We now put the potatoes into the pan, allowing the wedges to absorb the flavour from the chicken juice(now at medium heat).</li>
             <li>Meanwhile, cut the onions, bell pepper, chili pepper.</li>
             <li>When the potatoes gain a nice brown color(like in the picture below), take them out and replace them with the onions we just cut(4 minutes).</li>
-            <img src ="../images/one-pan-chicken2.png" alt ="Golden crispy wedge fries, with slightly black edges from the chicken" width ="400">
+            <img class="instruction-photo" src ="../images/one-pan-chicken2.png" alt ="Golden crispy wedge fries, with slightly black edges from the chicken" width ="400">
             <li>Now add the peppers and cook for 4 more minutes.</li>
             <li>Add the chicken and potatoes at low heat while we cut the greens.</li>
             <li>Finely cut the dill, parsley and green onions. Save a bit of the greens to use at the end, and add the rest of them to the pan.</li>
