--- a/recipes/overnight-oats.html
+++ b/recipes/overnight-oats.html
@@ -33,7 +33,8 @@
         <h2>Recipe variations</h2>
         <h3>Banana bread oats</h3>
         <img src="../images/overnight-oats-banana.png" alt="Oatmeal covered with banana slices" width="300">
-        <ul>
+        <ul class="inline-list">
+            <h4>Ingredients</h4>
             <li>1 serving Base oats</li>
             <li>Ripe banana</li>
             <li>1/2 tsp Cinnamon</li>
@@ -47,7 +48,8 @@
         </ol>
         <h3>Mocha Latte oats</h3>
         <img src="../images/overnight-oats-mocha.png" alt="Oatmeal covered in coffee" width="300">
-        <ul>
+        <ul class="inline-list">
+            <h4>Ingredients</h4>
             <li>1 serving Base oats, but scaling the 1/2 milk down to 1/4</li>
             <li>1/2 Shots of espresso</li>
             <li>1 tbsp Cocoa powder</li>
@@ -60,11 +62,13 @@
         </ol>
         <h3>Choco-Peanut butter oats</h3>
         <img class="instruction-photo" src="../images/overnight-oats-choco.png" alt="Oatmeal embraced by a chocolate shell and covered with other toppings" width="300">
-        <ul>
+        <ul class="inline-list">
             <h4>For main cup</h4>
             <li>1 serving Base oats</li>
             <li>2 tbsp Peanut butter</li>
             <li>1 tbsp Cocoa powder</li>
+        </ul>
+        <ul class="inline-list">
             <h4>For chocolate syrup</h4>
             <li>1 tbsp Coconut oil</li>
             <li>1 tsp Cocoa powder</li>
